--- a/css/style.css
+++ b/css/style.css
@@ -39,18 +39,18 @@ html, body {
 ******************************************************/
 
 /*corrects IE min-height bug*/
-html { display: flex;}
-body { width: 100%;}
+/*html { display: flex;}*/
+/*body { width: 100%;}*/
 
-.sfooter {
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-}
+/*.sfooter {*/
+	/*display: flex;*/
+	/*flex-direction: column;*/
+	/*min-height: 100vh;*/
+/*}*/
 
-.sfooter-content {
-	flex: 1 0 auto;
-}
+/*.sfooter-content {*/
+	/*flex: 1 0 auto;*/
+/*}*/
 
 /*****************************************************
 * ADD YOUR OWN CSS BELOW! (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
@@ -62,6 +62,7 @@ body { width: 100%;}
 * * Pseudo Classes
 * * Attribute Selectors
 ******************************************************/
+/* UNIVERSAL STYLES: */
 @font-face {
 	font-family: "Liberation Mono";
 	src: url(./LiberationMono-Regular.ttf);
@@ -70,4 +71,19 @@ body { width: 100%;}
 .container {
 	font-family: "Liberation Mono", monospace;
 }
+
+/* HEADER: */
+
+
+/* INSTRUCTIONS PANEL: */
+
+/* WELCOME IMAGE: */
+
+/* ABOUT ME: */
+
+/*PROFESSIONAL SKILLZ:*/
+
+/*CONTACT FORM*/
+
+/* FOOTER: */
 
