--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
 /*****************************************************
 * CSS Mockup Activity - Custom CSS Stylesheet
-* @author rlewis37
+* @author jtredway
 *
 * Some rules have been included here to give you a head start.
 * Create your own custom CSS rules below. Have fun!
 ******************************************************/
 
-html, body {
-	margin: 0;
+html {
 	box-sizing: border-box;
+	font-family: "Liberation Mono", monospace;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
 }
 
 .container {
@@ -19,6 +23,48 @@ html, body {
 .clearfix {
 	clear: both;
 }
+
+/* UNIVERSAL STYLES: */
+@font-face {
+	font-family: "Liberation Mono";
+	src: url(./LiberationMono-Regular.ttf);
+}
+
+.container {
+
+}
+
+/* HEADER: */
+header {
+	display: flex;
+	width: 100%;
+	height: 8rem;
+	align-items: center;
+	justify-content: space-between;
+	color: #00ff02;
+	background-color: #333333;
+	border-bottom: 1px solid #000000;
+}
+/* INSTRUCTIONS PANEL: */
+
+/* WELCOME IMAGE: */
+
+/* ABOUT ME: */
+
+/*PROFESSIONAL SKILLZ:*/
+
+/*CONTACT FORM*/
+
+/* FOOTER: */
+/*.sfooter {*/
+/*display: flex;*/
+/*flex-direction: column;*/
+/*min-height: 100vh;*/
+/*}*/
+
+/*.sfooter-content {*/
+/*flex: 1 0 auto;*/
+/*}*/
 
 /* create a responsive container */
 @media only screen and (min-width: 1200px) {
@@ -32,58 +78,3 @@ html, body {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
 	.container { width: 750px; }
 }
-
-/*****************************************************
-* Flexbox Sticky Footer
-* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
-******************************************************/
-
-/*corrects IE min-height bug*/
-/*html { display: flex;}*/
-/*body { width: 100%;}*/
-
-/*.sfooter {*/
-	/*display: flex;*/
-	/*flex-direction: column;*/
-	/*min-height: 100vh;*/
-/*}*/
-
-/*.sfooter-content {*/
-	/*flex: 1 0 auto;*/
-/*}*/
-
-/*****************************************************
-* ADD YOUR OWN CSS BELOW! (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
-*
-* HINT: You might want to be conversant with the following:
-* * Shorthand syntax for padding, margin, and borders
-* * Display property and values... and the differences between them.
-* * The Box Model
-* * Pseudo Classes
-* * Attribute Selectors
-******************************************************/
-/* UNIVERSAL STYLES: */
-@font-face {
-	font-family: "Liberation Mono";
-	src: url(./LiberationMono-Regular.ttf);
-}
-
-.container {
-	font-family: "Liberation Mono", monospace;
-}
-
-/* HEADER: */
-
-
-/* INSTRUCTIONS PANEL: */
-
-/* WELCOME IMAGE: */
-
-/* ABOUT ME: */
-
-/*PROFESSIONAL SKILLZ:*/
-
-/*CONTACT FORM*/
-
-/* FOOTER: */
-
