--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
 /*****************************************************
 * CSS Mockup Activity - Custom CSS Stylesheet
 * @author jtredway
-*
-* Some rules have been included here to give you a head start.
-* Create your own custom CSS rules below. Have fun!
 ******************************************************/
 
 html {
@@ -15,14 +12,9 @@ html {
 	box-sizing: inherit;
 }
 
-.container {
-	margin: 0 auto;
-	padding: 0 2rem;
-}
-
-.clearfix {
-	clear: both;
-}
+/*.clearfix {*/
+	/*clear: both;*/
+/*}*/
 
 /* UNIVERSAL STYLES: */
 @font-face {
@@ -31,14 +23,20 @@ html {
 }
 
 .container {
+	width: 100%;
+	margin: 0 auto;
+	padding: 0 2rem;
+}
 
+* {
+	border: 1px solid red;
 }
 
 /* HEADER: */
-header {
+header .container {
 	display: flex;
 	width: 100%;
-	height: 8rem;
+	height: 5rem;
 	align-items: center;
 	justify-content: space-between;
 	color: #00ff02;
@@ -46,8 +44,28 @@ header {
 	border-bottom: 1px solid #000000;
 }
 /* INSTRUCTIONS PANEL: */
+.instructions {
+	width: 100%
+}
 
-/* WELCOME IMAGE: */
+.instructions .container {
+
+}
+
+.image-container {
+	width: 50%;
+	margin: 3rem auto 1rem auto;
+	border: 1px solid red;
+}
+
+.image {
+	width: 100%;
+	height: auto;
+}
+
+instructions-wrapper {
+	border: 2px solid black;
+}
 
 /* ABOUT ME: */
 
