--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ section {
 /* HEADER: */
 header {
 	display: flex;
+	flex-flow: wrap;
 	width: 100%;
 	height: 5rem;
 	align-items: center;
@@ -64,6 +65,7 @@ header {
 .instructions-wrapper {
 	border: 3px solid black;
 	display: inline-flex;
+	flex-flow: wrap;
 	align-items: center;
 	justify-content: space-between;
 }
@@ -83,6 +85,7 @@ header {
 	width: 100%;
 	background-color: blue;
 	display: inline-flex;
+	flex-flow: wrap;
 	align-items: center;
 	justify-content: space-around;
 }
