--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ section {
 /* HEADER: */
 header {
 	display: flex;
-	flex-flow: wrap;
+	/*flex-flow: wrap;*/
 	width: 100%;
 	height: 5rem;
 	align-items: center;
