--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,11 @@ header {
 	background-color: #333333;
 	border-bottom: 1px solid #000000;
 }
+
+@media only screen and (min-width: 768px) {
+
+}
+
 /* INSTRUCTIONS PANEL: */
 .instructions-wrapper {
 	max-width: 78%;
@@ -151,26 +156,19 @@ th, td {
 }
 /*CONTACT FORM*/
 
-/* FOOTER: */
-/*.sfooter {*/
-/*display: flex;*/
-/*flex-direction: column;*/
-/*min-height: 100vh;*/
-/*}*/
 
-/*.sfooter-content {*/
-/*flex: 1 0 auto;*/
-/*}*/
 
-/* create a responsive container */
+/*if device bigger than a tablet (in portrait):*/
 @media only screen and (min-width: 1200px) {
-	.container { width: 1170px; }
+
 }
 
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-	.container { width: 970px; }
+/*if device bigger than a phone (in landscape):*/
+@media only screen and (min-width: 735px) {
+
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-	.container { width: 750px; }
+/*if device bigger than a phone:*/
+@media only screen and (min-width: 412px) {
+
 }
