Fixed the responsiveness for the header and instructions section.

--- a/css/style.css
+++ b/css/style.css
@@ -41,59 +41,82 @@ section {
 
 /* HEADER: */
 header {
-	display: flex;
-	/*flex-flow: wrap;*/
 	width: 100%;
-	height: 5rem;
-	align-items: center;
-	justify-content: space-around;
+	min-height: 5rem;
 	color: #00ff02;
 	background-color: #333333;
 	border-bottom: 1px solid #000000;
+	display: flex;
+	justify-content: center;
+}
+
+.header-flex-container {
+	display: flex;
+	flex-flow: wrap;
+	width: 80%;
+	min-height: inherit;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 @media only screen and (min-width: 768px) {
+	.header-flex-container {
+		flex-flow: nowrap;
+	}
+}
 
+.header-flex-container h1 {
+	margin-right: 2rem;
 }
 
 /* INSTRUCTIONS PANEL: */
-.instructions-wrapper {
-	max-width: 78%;
+.instructions {
+	width: 100%;
 	margin: 2rem auto;
 	border: 1px solid red;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
-.hero-image-container {
-	flex: 0 1 50px;
-	align-content: center;
-	margin: 3rem auto 1rem auto;
+.hero-image-wrapper {
+	flex: 0 1 auto;
+	margin: 3rem auto;
 	border: 1px solid red;
+	padding: 0 1rem;
 }
 
-.instructions-box {
+.instructions-flex-container {
 	border: 3px solid black;
-	display: inline-flex;
+	display: flex;
 	/*width: auto;*/
 	flex-flow: wrap;
+	align-content: center;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
+	width: 80%;
 }
 
-.instructions-content {
-	width: 50%;
+/*if device bigger than a phone in landscape:*/
+@media only screen and (min-width: 850px) {
+	.instructions-flex-container {
+		justify-content: space-between;
+	}
+}
+
+.instructions-content-flex-item {
+	width: 40%;
 	margin: 2rem;
-	min-width: 12rem;
+	min-width: 17rem;
 	word-wrap: break-word;
 	border: 1px solid red;
 }
 
 /*image wrapper for Captain Janeway:*/
-.instructions-image-container {
+.instructions-image-flex-item {
 	width: 25%;
 	margin: 2rem;
-	min-width: 12rem;
+	min-width: 17rem;
 	border: 1px solid red;
 }
 
@@ -107,15 +130,19 @@ header {
 	justify-content: space-around;
 }
 
+about-me-flex-container {
+	width: 80%;
+}
+
 /*image wrapper for Captain Picard:*/
-.about-me-image-container {
+.about-me-image-flex-item {
 	width: 20rem;
 	border: 2px solid white;
 	margin: 2rem auto;
 	flex-shrink: 0;
 }
 
-.about-me-content {
+.about-me-content-flex-item {
 	width: 50%;
 	color: white;
 	margin-right: auto;
