--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,9 @@ header {
 	align-items: center;
 }
 
+/* hero image: */
 .instructions > .image-wrapper {
+	flex-basis: 50%;
 	flex: 0 1 auto;
 	margin: 3rem auto;
 	padding: 0 1rem;
@@ -130,7 +132,6 @@ header {
 	border: 1px solid red;
 }
 
-/*if device bigger than a phone in landscape:*/
 @media only screen and (min-width: 1200px) {
 	.about-me > .container {
 		justify-content: space-between;
@@ -146,7 +147,6 @@ header {
 	border: 1px solid red;
 }
 
-/*if device bigger than a phone in landscape:*/
 @media only screen and (min-width: 1200px) {
 	.about-me > .container > .image-wrapper {
 		margin: 2rem 2rem 2rem 0rem;
@@ -163,7 +163,6 @@ header {
 	border: 1px solid red;
 }
 
-/*if device bigger than a phone in landscape:*/
 @media only screen and (min-width: 1200px) {
 	.about-me > .container > .content-wrapper {
 		margin: 2rem 0 2rem 2rem;
@@ -204,8 +203,14 @@ table, td, th {
 
 th, td {
 	height: 3rem;
-	padding: 1rem;
+	padding: .5rem;
 	text-align: left;
+}
+
+@media only screen and (min-width: 750px) {
+	th, td {
+		padding: 1rem;
+	}
 }
 
 /*CONTACT FORM*/
