--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 html {
 	box-sizing: border-box;
 	font-family: "Liberation Mono", monospace;
+	font-size: 16px; /* CNM server increases root html font-size by 50% (set this root to 10px to correct the CNM server, but then it's messed up everywhere else */
 }
 
 *, *:before, *:after {
